tests/rustdoc-ui/intra-doc/reference-links.stderr
error: unresolved link to `std::process::Comman`
  --> $DIR/reference-links.rs:5:10
   |
LL | //! [a]: std::process::Comman
   |          ^^^^^^^^^^^^^^^^^^^^ no item named `Comman` in module `process`
   |
note: the lint level is defined here
  --> $DIR/reference-links.rs:2:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

